attempt 2 at fixing page overflow

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
 
   box-sizing: border-box;
-  height: 100vh;
+  height: calc(100vh - 40px);
   padding: 20px;
   
   font-family: sans-serif;
